# svg-guard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/svg_guard/: __init__.py  __main__.py  _io.py  checker.py  cli.py  fixer.py  report.py
tests/: conftest.py  test_checker.py  test_cli.py  test_directory.py  test_fixer.py  test_fixer_units.py  test_io.py  test_report.py
